# simple_plotting

./: .gitignore  README.md  pyproject.toml
plotting_script/: config.py  excel_reader.py  main.py  plotter.py
