[tool.poetry]
name = "plotting-script"
version = "0.1.0"
description = ""
authors = ["Sergey Devyatkov <serg.devyatkov@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
main = "plotting_script.main:main"

[tool.poetry.dependencies]
python = "^3.9"
plotly = "^5.24.0"
pandas = "^2.2.2"
openpyxl = "^3.1.5"


[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
